k8s/dev/invoiceapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoiceapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invoiceapi
  template:
    metadata:
      labels:
        app: invoiceapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: invoiceapi
        image: cursorappdev.azurecr.io/invoice-api:latest
        ports:
        - containerPort: 8080
