k8s/dev/invoiceapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoiceapi-service
spec:
  type: LoadBalancer
  selector:
    app: invoiceapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
