k8s/dev/invoiceapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoiceapi-ingress
spec:
  rules:
  - host: cursorapp-dev.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invoiceapi-service
            port:
              number: 80
